test/error/iocheck/err6.rzy
// Error: query is not allowed to write state

component
  Err6
    input
      query():R{0,100};
    
    implementation elementary
    
    var
      a : R{0,100};
    
    entry
      a := 0;
    end
    
    function bar()
      a := 42;
    end
    
    function foo()
      bar();
    end
    
    function query():R{0,100}
      foo();
      return a;
    end

  end

